--- a/css/styles.css
+++ b/css/styles.css
@@ -16,12 +16,31 @@ body{
     padding: 0%;
     margin: 0%;
     font-family: "arial", sans-serif;
-    font-size: 16px;
-    line-height: 1,5;
+    font-size: 14px;
+    line-height: 16px;
     height: 100%;
     background-color: #fff;
     color: #222;
+    transition: background-color 0.4s ease, color 0.4s ease;
 }
+
+body.dark-mode {
+    background-color: #202c37;
+    color: #ffffff;
+}
+
+body.dark-mode .site-header {
+    background-color: #2b3945;
+}
+
+body.dark-mode .site-header-logo {
+    color: #ffffff;
+}
+
+body.dark-mode .site-header-theme-toggler-text {
+    color: #ffffff;
+}
+
 
 img {
     max-width: 100%;
@@ -30,13 +49,61 @@ img {
 
 .container {
     width: 100%;
-    max-width: 1200px;
-    padding-left: 50px;
-    padding-right: 50px;
+    max-width: 1320px;
+    padding-left: 20px;
+    padding-right: 20px;
     margin-left: auto;
     margin-left: auto;
 } 
 
 .main-content {
     flex-grow: 1;
+}
+/* site-header  */
+.site-header {
+padding-top: 24px;
+padding-bottom: 24px;
+box-shadow: 0px 2px 4px 0px #0000000E;
+white-space: nowrap;
+}
+.site-header-container {
+display: flex;
+justify-content: space-between;
+align-items: center;
+}
+
+.site-header-logo {
+font-size: 24px;
+line-height: normal;
+font-weight: 800;
+color: #111517;
+text-decoration: none;
+}
+.site-header-logo:hover {
+opacity: 0.8;
+}
+.site-header-logo:active {
+opacity: 0.6;
+}
+.site-header-theme-toggler {
+padding: 0;
+border: 0;
+background-color: transparent;
+cursor: pointer;
+}
+.site-header-theme-toggler:hover {
+opacity: 0.8;
+}
+.site-header-theme-toggler:active {
+opacity: 0.6;
+}
+.site-header-theme-toggler-inner {
+display: flex;
+align-items: center;
+}
+.site-header-theme-toggler-text {
+margin-left: 8px;
+font-size: 16px;
+line-height: 22px;
+font-weight: 600;
 }
