--- a/css/styles.css
+++ b/css/styles.css
@@ -58,7 +58,14 @@ img {
 
 .main-content {
     flex-grow: 1;
+    padding-top: 48px;
+    padding-bottom: 48px;
 }
+
+.main-content-inner {
+    padding-top: 80px;
+}
+
 /* site-header  */
 .site-header {
 padding-top: 24px;
@@ -106,4 +113,200 @@ margin-left: 8px;
 font-size: 16px;
 line-height: 22px;
 font-weight: 600;
+}
+
+
+/* filters  */
+
+.filters {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 48px;
+}
+.filters-search-input {
+    min-width: 480px;
+    padding: 18px 74px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0px 2px 9px rgb(0, 0, 0.06);
+}
+.filters-region-select {
+    min-width: 200px;
+    padding: 18px 24px;
+    border: 0;
+    border-radius: 5px;
+    box-shadow: 0px 2px 9px rgb(0, 0, 0.06);
+}
+
+
+.index-countries-list {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+    margin-left: -75px;
+    margin-bottom: -75px;
+    list-style: none;
+}
+.index-countries-item {
+    width: calc(25% - 75px);
+    margin-left: 75px;
+    margin-bottom: 75px;
+}
+.index-country {
+    border-radius: 5px;
+    overflow: hidden;
+
+}
+.index-country-flag {
+    width: 100%;
+    height: 160px;
+    object-fit: cover;
+}
+.index-country-info {
+    padding: 24px 24px 48px;
+}
+.index-country-name {
+    margin-top: 0;
+    margin-bottom: 16px;
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: 800;
+    text-decoration: none;
+    color: #000;
+}
+.idex-country-details {
+    margin: 0;
+}
+.index-country-deatils-item {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.index-country-deatils-item:not(:last-child) {
+margin-bottom: 8px;
+}
+.index-country-details-title {
+font-weight: 800;
+}
+.index-country-details-value {
+    margin-left: 4px;
+}
+
+/* country-page  */
+
+.country-page-back-wrapper {
+margin-bottom: 80px;
+}
+.country-page-back-link {
+display: inline-flex;
+align-items: center;
+padding: 10px 40px;
+border-radius: 6px;
+background-color: rgba(255, 255, 255, 1);
+color: rgba(17, 21, 23, 1);
+box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.3);
+}
+
+.country-page-back-link:hover {
+    opacity: 0.8;
+}
+.country-page-back-link:active {
+    opacity: 0.6;
+}
+
+.country-page-back-icon {
+width: 20px;
+height: 20px;
+margin-right: 10px;
+}
+.country-page-back-text {
+font-size: 16px;
+line-height: 20px;
+}
+
+.country-page-flag-info {
+display: flex;
+}
+.country-page-flag {
+width: 560px;
+height: 400px;
+margin-right: 120px;
+object-fit: cover;
+border-radius: 10px;
+box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.0294);
+}
+
+.country-page-info {
+width: 600px;
+padding-top: 40px;
+}
+.country-page-title {
+margin-top: 0;
+margin-bottom: 24px;
+font-size: 32px;
+line-height: 44px;
+font-weight: 800;
+}
+.country-page-dls-wrapper {
+display: flex;
+justify-content: space-between;
+margin-bottom: 70px;
+}
+.country-page-details {
+width: 250px;
+}
+.country-page-details-item {
+display: flex;
+}
+.country-page-details-item:not(:last-child) {
+margin-bottom: 12px;
+}
+.country-page-details-title {
+margin-right: 4px;
+font-weight: 600;
+}
+.country-page-details-value {
+margin: 0;
+font-weight: 300;
+}
+
+.country-page-border-countries {
+display: flex;
+align-items: center;
+}
+.country-page-border-countries-heading {
+margin-top: 0;
+margin-bottom: 0;
+margin-right: 15px;
+font-size: 16px;
+line-height: 20px;
+font-weight: 600;
+}
+.country-page-border-countries-list {
+display: flex;
+flex-wrap: wrap;
+}
+.country-page-border-country-link {
+min-width: 96px;
+padding: 5px 10px;
+border-radius: 2px;
+background-color: #fff;
+color: #000;
+box-shadow: 0px 0px 4px 1px rgba(0, 0, 0, 0.1049);
+transition: background-color 0.4 ease, color 0.4 ease;
+text-decoration: none;
+}
+
+.country-page-border-country-link:not(:last-child) {
+margin-right: 10px;
+}
+
+.country-page-border-country-link:hover {
+opacity: 0.8;
+}
+
+.country-page-border-country-link:active {
+opacity: 0.6;
 }
